Finally fixed overlapping dark/light background themes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,14 +17,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  color: #000;
-  background-image: linear-gradient(115deg, #E4E7EB, #616E7C), url(../public/brackets.svg);
   background-repeat: no-repeat, no-repeat;
   background-position: top right;
   background-attachment: fixed;
   background-blend-mode: multiply;
-  /* height: 100vh;
-  height: 100dvh; */
 }
 
 a {
@@ -34,6 +30,15 @@ a {
 
 * {
   box-sizing: border-box;
+}
+@media (prefers-color-scheme: light) {
+  html {
+    color-scheme: light;
+  }
+  body {
+    background-image: linear-gradient(115deg, #E4E7EB, #616E7C), url(../public/brackets.svg);
+    color: #000;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
